--- a/.github/workflows/03-core-features--02-step-types-espocia.yaml
+++ b/.github/workflows/03-core-features--02-step-types-espocia.yaml
@@ -18,7 +18,7 @@ jobs:
   say-hello-action:
     runs-on: ubuntu-24.04
     steps:
-      - uses: actions/hello-world-javascript-action
+      - uses: actions/hello-world-javascript-action@e76147da8e5c81eaf017dede5645551d4b94427b
         with:
           who-to-greet: "World"
 
