--- a/.github/workflows/03-core-features--02-step-types-espocia.yaml
+++ b/.github/workflows/03-core-features--02-step-types-espocia.yaml
@@ -20,6 +20,6 @@ jobs:
     steps:
       - uses: actions/hello-world-javascript-action@e76147da8e5c81eaf017dede5645551d4b94427b
         with:
-          who-to-greet: "World"
+          who-to-greet: "from an action in the Github Action marketplace"
 
 
